# SVDCompression

./: .gitignore  CMakeLists.txt  CommandFile.txt  README.md  SVDCompression Command File.lnk  SVDCompression.exe ~CLI.lnk  SVDCompression.exe ~FILE.lnk  SVDCompression.exe ~TEST.lnk  SVDCompression.lnk  commands.txt  main.cpp
input/: myartskills.tga  testSVD.tga
output/: testOutput.txt
output/images/: C_testOutput.tga
res/huffman-coding/: Huffman.cpp  Huffman.h
res/python/: SVD.py  TestReadWrite.py  test.py  test2.py  testwriting2.txt
res/python testing/: test2.py
res/scenes/: CLIShow.txt  test.txt  test2.txt
res/scripts/commands/: Commands.cpp  Commands.h
res/scripts/managers/: AssetManager.cpp  AssetManager.h  TextureManager.cpp  TextureManager.h  UIElementManager.cpp  UIElementManager.h
res/scripts/python/: PythonScript.cpp  PythonScript.h
res/scripts/ui/: Button.cpp  Button.h  SpriteBased.cpp  SpriteBased.h  UIElement.cpp  UIElement.h
res/scripts/ui/super/: SpriteBased.cpp  TextBased.cpp  TextBased.h
res/src/: main.cpp
res/src/commands/: Commands.cpp  Commands.h
res/src/huffman-coding/: Huffman.cpp  Huffman.h
res/src/managers/: AssetManager.cpp  AssetManager.h  SceneManager.cpp  SceneManager.h  ViewManager.cpp  ViewManager.h
res/src/python/: PythonScript.cpp  PythonScript.h
res/src/ui/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ProgressBar.cpp  ProgressBar.h
res/src/ui/functions/: ButtonFunctions.cpp  ButtonFunctions.h
res/src/ui/scene/: Scene.cpp  Scene.h
res/src/ui/super/: SpriteBased.cpp  SpriteBased.h  UIElement.cpp  UIElement.h
res/src/ui/view/: Scene.cpp  Scene.h  View.cpp  View.h
res/src/ui/viewer/: ImageViewer.cpp  ImageViewer.h
res/views/: test.txt  test2.txt
